--- a/index.html
+++ b/index.html
@@ -14,6 +14,29 @@
     <header>
         <h1>CALCULATOR</h1>
     </header>
+    <div class="calculator">
+        <div class="display">0</div>
+        <div class="btns">
+            <button value="AC" class="all-clear">AC</button>
+            <button value="back" class="delete">DEL</button>
+            <button value="/" class="operator">/</button>
+            <button value="7" class="number">7</button>
+            <button value="8" class="number">8</button>
+            <button value="9" class="number">9</button>
+            <button value="*" class="operator">X</button>
+            <button value="4" class="number">4</button>
+            <button value="5" class="number">5</button>
+            <button value="6" class="number">6</button>
+            <button value="-" class="operator">-</button>
+            <button value="1" class="number">1</button>
+            <button value="2" class="number">2</button>
+            <button value="3" class="number">3</button>
+            <button value="-" class="operator">+</button>
+            <button value="0" class="number">0</button>
+            <button value="." class="dot">.</button>
+            <button value="=" class="equals">=</button>
+        </div>
+    </div>
 </body>
 
 </html>
