--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>CALCULATOR</h1>
     </header>
     <div class="calculator">
-        <div class="display">0</div>
+        <div class="display">888888888888</div>
         <div class="btns">
             <button value="AC" class="all-clear">AC</button>
             <button value="back" class="delete">DEL</button>
