--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button value="1" class="number">1</button>
             <button value="2" class="number">2</button>
             <button value="3" class="number">3</button>
-            <button value="-" class="operator">+</button>
+            <button value="+" class="operator">+</button>
             <button value="0" class="number">0</button>
             <button value="." class="dot">.</button>
             <button value="=" class="equals">=</button>
