--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
         <h1>CALCULATOR</h1>
     </header>
     <div class="calculator">
-        <div class="display">888888888888</div>
+        <div class="display">
+            <div class="current-display">0</div>
+        </div>
         <div class="btns">
             <button value="AC" class="all-clear">AC</button>
             <button value="back" class="delete">DEL</button>
+            <button value="%" class="operator">%</button>
             <button value="/" class="operator">/</button>
             <button value="7" class="number">7</button>
             <button value="8" class="number">8</button>
@@ -31,7 +34,7 @@
             <button value="1" class="number">1</button>
             <button value="2" class="number">2</button>
             <button value="3" class="number">3</button>
-            <button value="+" class="operator">+</button>
+            <button value="-" class="operator">+</button>
             <button value="0" class="number">0</button>
             <button value="." class="dot">.</button>
             <button value="=" class="equals">=</button>
