Added Buttons JS and output on console

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <div class="calculator">
         <div class="display">
-            <div class="current-display">0</div>
+            <div class="current-display">888888888888</div>
         </div>
         <div class="btns">
             <button value="AC" class="all-clear">AC</button>
@@ -34,7 +34,7 @@
             <button value="1" class="number">1</button>
             <button value="2" class="number">2</button>
             <button value="3" class="number">3</button>
-            <button value="-" class="operator">+</button>
+            <button value="+" class="operator">+</button>
             <button value="0" class="number">0</button>
             <button value="." class="dot">.</button>
             <button value="=" class="equals">=</button>
