Added Display Features and First Operator and Operand to calculator

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button value="+" class="operator">+</button>
             <button value="0" class="number">0</button>
             <button value="." class="dot">.</button>
-            <button value="=" class="equals">=</button>
+            <button value="=" class="operator" id="equals">=</button>
         </div>
     </div>
 </body>
